--- a/index.css
+++ b/index.css
@@ -42,6 +42,12 @@ li a {
     border-right: 2px solid black;
 }
 
+.date {
+    display: flex;
+    justify-content: flex-end;
+    margin: 16px 0;
+}
+
 h1 {
   font-size: medium;
   margin-left: 10px;
@@ -52,10 +58,6 @@ h1 {
 }
 
 .book-container {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
     padding: 30px 20px;
 }
 
@@ -63,12 +65,21 @@ h1 {
     text-align: center;
 }
 
-.form-container {
+.booklist {
+    padding: 10px;
+    
+}
+
+.booklist ul {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 50px 30px;
+    justify-content: space-between;
+    list-style-type: none;
+    border: 1px solid black;
+}
+
+.form-container {
+    margin: 0 400px;
+    padding: 50px 20px;
 }
 
 .form-container h2 {
@@ -122,5 +133,7 @@ footer p {
 }
 
 @media only screen and (min-width: 678px) {
-    
+    .booklist {
+        padding: 50px 250px;
+    }
 }
